# example-esp32

./: .gitignore  .gitmodules  .snmp_loop.sh.swp  CMakeLists.txt  HowToReadme.md  Makefile  README.OSX.md  README.WIN.md  README.md  create_ubirch_devices.py  lol.txt  sdkconfig  sdkconfig.defaults  snmp_loop.sh
components/cjson/include/cjson/: cJSON.h  cJSON_Utils.h
components/cjson/lib/: libcjson.so.1  libcjson.so.1.7.1  libcjson_utils.so.1  libcjson_utils.so.1.7.1
components/cjson/lib/cmake/cJSON/: cJSONConfig.cmake  cJSONConfigVersion.cmake  cjson-noconfig.cmake  cjson.cmake  cjson_utils-noconfig.cmake  cjson_utils.cmake
components/cjson/lib/pkgconfig/: libcjson.pc  libcjson_utils.pc
components/decke/: CMakeLists.txt  Makefile  component.mk  math_d.c  math_d.h
components/decke/include/: math_d.h
components/decke/test/: CMakeLists.txt  component.mk  test_math_d.c
components/msgpack-c/: CMakeLists.txt
components/ubirch-esp32-console/: CMakeLists.txt  cmd_system.c  cmd_ubirch.c  cmd_ubirch.h  ubirch_console.c
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  console_cmd.c  firmware_update.c  firmware_update.h  http.c  http.h  keyHandling.c  keyHandling.h  key_handling.c  key_handling.h  main.c  networkUtils.c  networkUtils.h  oled.c  oled.h  sensor.c  sensor.h  sntpTime.c  sntpTime.h  sntp_time.c  sntp_time.h  storage.c  storage.h  temp_sensor.cpp  temp_sensor.h  temp_temp.c  temp_temp.h  ubirch-adc.c  ubirch-adc.h  ubirch-proto-http.c  ubirch-proto-http.h  ubirch_console.c  ubirch_console.h  ubirch_proto_http.c  ubirch_proto_http.h  util.c  util.h  wifi.c  (+1 more)
main/ping/: ping.c  ping.h
main/simple_snmp_agent/: my_mib.c  simple_snmp_agent.c
main/snmp/: lwipopts.h  snmp_example.c
main/snmp/snmp_private_mib/: lwip_prvmib.c
main/snmp/snmp_v3/: snmpv3_dummy.c
main/ubirch-protocol-c8y/: settings.h  ubirch-protocol-c8y.c  ubirch-protocol-c8y.h
main/ubirch-snmp/: ubirch_snmp_agent.c  ubirch_snmp_agent.h
test/: CMakeLists.txt  Makefile
test/main/: CMakeLists.txt  Kconfig.projbuild  example_test.c  test_runner.c
